--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "file-renamer.core",
+  "version": "0.1.0",
+  "description": "",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -6,15 +9,16 @@
     "lint": "eslint src/**/*.ts && tslint src/**/*.ts && npm run .lint-md",
     "lint:fix": "eslint --fix src/**/*.ts && tslint --fix src/**/*.ts",
     "test": "jest",
-
     ".. sub script ..": "",
     ".cp": "node -e \"[_,sr,ds] = process.argv; require('fs').copyFileSync(sr, ds.endsWith('/') ? ds+sr : ds)\"",
     ".copy-dist": "npm run .cp package.json dist/ && npm run .cp LICENSE dist/ && npm run .cp README.md dist/",
     ".lint-md": "npx remark ./**/*.md --silently-ignore",
-
     "__ memo __": "",
     "__ls__": "npm ls --depth=0",
     "__outdated__": "npm outdated"
+  },
+  "dependencies": {
+    "@simpler-one/node.utils": "^0.1.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
@@ -32,6 +36,17 @@
     "tslint": "^6.1.3",
     "typescript": "^4.3.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/simpler-one/file-renamer.core.git"
+  },
+  "keywords": [
+    "rename"
+  ],
   "author": "Hiroaki Kobayashi",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/simpler-one/file-renamer.core/issues"
+  },
+  "homepage": "https://github.com/simpler-one/file-renamer.core#readme"
 }
